Pull translations from Transifex

--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -5,7 +5,7 @@
   "assignment.details": "Uppdragsbeskrivning",
   "assignment.hour": "Timmar",
   "assignment.hours": "Timmar",
-  "assignment.rate.gross_salary": "bruttulön",
+  "assignment.rate.gross_salary": "bruttolön",
   "assignment.status.applied": "Du har sökt uppdraget",
   "assignment.status.apply": "Sök uppdraget",
   "assignment.status.click_here": "Klicka här",
@@ -22,10 +22,8 @@
   "assignment.status.reply": "Ge besked",
   "assignment.status.user_company_hire": "Företaget vill anlita dig",
   "assignment.status.you_hired": "Du har blivit anställd",
-  "common.all_jobs": "Alla uppdrag ({{nbrOfJobs}})",
   "common.back": "Tillbaka",
   "common.congratulation": "Grattis!",
-  "common.edit_profile": "Redigera profil",
   "common.error": "Hoppsan! Något gick fel.. oroa dig inte vi jobbar på det!",
   "common.find_assignment": "Hitta uppdrag",
   "common.hour": "tim",
@@ -34,36 +32,43 @@
   "common.net_salary": "efter skatt",
   "common.no": "Nej",
   "common.save": "Spara",
-  "common.show_all": "Visa alla",
   "common.start_here": "Starta här!",
   "common.submit": "Skicka",
-  "common.welcome_user": "Välkommen {{username}}!",
   "common.yes": "Ja",
   "company.assignments.filter_1": "Uppdrag",
   "company.assignments.filter_2": "Arkiv",
+  "confirmation.applied.for.job.button": "Hitta fler uppdrag",
+  "confirmation.applied.for.job.description": "Vi på Just Arrived håller tummarna. Om uppdragsgivaren skickar ett erbjudande har du 18 timmar på dig att tacka ja till uppdraget. Du hittar uppdraget under Mina Uppdrag. Där samlas även all kommunikation som sker med uppdragsgivaren.",
+  "confirmation.applied.for.job.title": "Du har ansökt om uppdraget",
+  "confirmation.contact.button": "Tillbaka till kontakt",
+  "confirmation.contact.title": "Tack för ditt meddelande! Vi besvarar det så fort vi kan.",
   "confirmation.password.reset.button": "Logga in",
   "confirmation.password.reset.description": "Du kan nu logga in med ditt nya lösenord.",
-  "confirmation.password.reset": "Ditt lösenord har blivit ändrat!",
-  "contact.confirmation.navigate.back": "Tillbaka till kontakt",
-  "contact.confirmation.title": "Tack för ditt meddelande! Vi besvarar det så fort vi kan.",
-  "contact.description": "Frågor eller funderingar? Vi hjälper gärna till!",
+  "confirmation.password.reset.link.button": "Tillbaka",
+  "confirmation.password.reset.link.description": "Om du klickar på länken som finns i meddelandet kan du välja nytt lösenord.",
+  "confirmation.password.reset.link.title": "Instruktioner om hur det återställer dit lösenord har skickats till dig!",
+  "confirmation.password.reset.title": "Ditt lösenord har blivit ändrat!",
+  "contact.form.description": "Frågor eller funderingar? Vi hjälper gärna till!",
+  "contact.form.email.placeholder": "E-post",
   "contact.form.email.validation.length": "Din e-post måste vara minst 6 tecken långt",
-  "contact.form.email.validation": "Du måste ange email",
-  "contact.form.email": "E-post",
+  "contact.form.email.validation.required": "Du måste ange email",
+  "contact.form.instruction": "Fyll i dina uppgifter nedan.",
+  "contact.form.message.placeholder": "Meddelande",
   "contact.form.message.validation.length": "Ditt meddelande måste vara minst 2 tecken långt",
-  "contact.form.message.validation": "Du måste ange meddelande",
-  "contact.form.message": "Meddelande",
+  "contact.form.message.validation.required": "Du måste ange meddelande",
+  "contact.form.name.placeholder": "Namn",
   "contact.form.name.validation.length": "Ditt namn måste vara längre än 2 tecken",
-  "contact.form.name.validation": "Du måste ange namn",
-  "contact.form.name": "Namn",
-  "contact.instruction": "Fyll i dina uppgifter nedan.",
-  "contact": "Kontakt",
+  "contact.form.name.validation.required": "Du måste ange namn",
+  "contact.form.submit.button": "Skicka",
+  "contact.title": "Kontakt",
   "cookies.description": "Vi använder cookies av tekniska skäl, för att underlätta användningen av våra tjänster och för att ge dig som användare relevant information när du besöker vår webbplats. Cookies används även för att mäta trafiken på vår webbplats, för insamling av statistik och för att förbättra våra tjänster. Genom att använda våra tjänster godkänner du att vi använder cookies, såvida du inte har inaktiverat dessa genom att ändra inställningarna för cookies i din webbläsare.",
   "cookies.info.description": "Vi använder cookies av tekniska skäl, för att underlätta användningen av våra tjänster och för att ge dig som användare relevant information när du besöker vår webbplats. Cookies används även för att mäta trafiken på vår webbplats, för insamling av statistik och för att förbättra våra tjänster. Genom att använda våra tjänster godkänner du att vi använder cookies, såvida du inte har inaktiverat dessa genom att ändra inställningarna för cookies i din webbläsare.",
   "cookies.info.title": "Om cookies",
   "cookies.read_more": "Mer om Cookies",
-  "faq.answer": "Svar",
-  "faq": "Frågor och Svar",
+  "error.description": "Hoppsan! Något gick fel.. oroa dig inte vi jobbar på det!",
+  "error.title": "Ett fel uppstod!",
+  "faq.answer.label": "Svar",
+  "faq.title": "Frågor och svar",
   "finance.form.account_clearing_number.validation": "Clearingnumret saknas",
   "finance.form.account_number.validation": "Kontonumret saknas",
   "forgot.password.form.email.or.phone.placeholder": "Email eller telefonnummer",
@@ -72,13 +77,38 @@
   "forgot.password.login.link": "Logga in",
   "forgot.password.submit.error": "Tyvärr kunde inte lösenordet återställas.",
   "forgot.password.title": "Återställ lösenord",
-  "home_page.jobs_applied_for.title": "Sökta uppdrag",
-  "home_page.new_jobs_slider.title": "Nya Uppdrag",
-  "home_page.user_jobs_slider_item.status.finished": "Genomförda",
-  "home_page.user_jobs_slider_item.status.ongoing": "Pågående",
-  "home_page.user_jobs_slider.title": "Mina uppdrag",
-  "login.forgot_password.confirmation.description": "Om du klickar på länken som finns i meddelandet kan du välja nytt lösenord.",
-  "login.forgot_password.confirmation": "Instruktioner om hur det återställer dit lösenord har skickats till dig!",
+  "home.header.logged.in.jobs.button": "Hitta uppdrag",
+  "home.header.logged.in.profile.button": "Redigera profil",
+  "home.header.logged.in.title": "Välkommen {{username}}!",
+  "home.header.logged.out.description": "Just Arrived",
+  "home.header.logged.out.login.button": "Logga i",
+  "home.header.logged.out.register.button": "Skapa konto",
+  "home.header.logged.out.sub.title": "Få erfarenheten du behöver för att komma in på den svenska arbetsmarknaden",
+  "home.header.logged.out.title": "Välkommen!",
+  "home.instructions.first.section.instruction0": "Logga in eller skapa ett konto",
+  "home.instructions.first.section.instruction1": "Sök jobb i din närhet",
+  "home.instructions.first.section.instruction2": "Få ett erbjudande",
+  "home.instructions.first.section.instruction3": "Acceptera erbjudandet",
+  "home.instructions.first.section.title": "Så här fungerar det:",
+  "home.instructions.second.section.description": "Öka dina chanser att få ett jobb:",
+  "home.instructions.second.section.instruction1": "Sök till alla jobb du kan tänka dig utföra",
+  "home.instructions.second.section.instruction2": "Fyll i din profil",
+  "home.instructions.second.section.instruction3": "Logga in ofta och se till att din profil är uppdaterad",
+  "home.instructions.second.section.title": "Maximera dina chanser",
+  "home.jobs.applied.for.title": "Sökta jobb",
+  "home.jobs.slider.new.jobs.title": "Nya uppdrag",
+  "home.jobs.slider.show.all.link": "Visa alla",
+  "home.jobs.slider.user.jobs.job.ended.label": "Genomfört",
+  "home.jobs.slider.user.jobs.title": "Mina uppdrag",
+  "home.jobs.slider.user.jobs.will.perform.job.label": "Pågående",
+  "home.partners.description": "Just Arrived är ett gemensamt pro bono-initiativ för att hjälpa nyanlända in på den svenska arbetsmarknaden. Vi ägs av en stiftelse och drivs av en sammanslutning av företag.",
+  "home.partners.title": "Våra partners",
+  "jobs.title": "Alla uppdrag ({{nbrOfJobs}})",
+  "language.proficiency.basic": "Grundläggande kunskaper",
+  "language.proficiency.beginner": "Nybörjare",
+  "language.proficiency.expert": "Flytande",
+  "language.proficiency.intermediate": "Yrkesnivå",
+  "language.proficiency.professional": "Professionell nivå",
   "login.form.email.or.phone.placeholder": "Email eller telefonnummer",
   "login.form.email.or.phone.validation.required": "Email eller telefonnummer saknas",
   "login.form.forgot.password.link": "Glömt ditt lösenord?",
@@ -88,55 +118,45 @@
   "login.form.submit.button": "Logga in",
   "login.title": "Logga in",
   "map.geolocation.error.close": "Dölj.",
-  "map.geolocation.error.prefix": "Din plats kunde inte bestämmas efterso",
+  "map.geolocation.error.permissionDenied": "du har stängd av möjligheten att bli positionerad på den här sidan.",
+  "map.geolocation.error.positionUnavailable": "vi kan inte bestämma din position.",
+  "map.geolocation.error.prefix": "Din plats kunde inte hittas eftersom {{mapError}}",
+  "map.geolocation.error.timeout": "tjänsten kunde inte nås.",
+  "map.geolocation.error.unsupportedBrowser": "din webbläsare stödjer inte positionering.",
   "menu.language.text_1": "Du kan gå tillbaka och ändra språk senare om du vill.",
   "menu.language.text_2": "Uppdrag, kommentarer och meddelanden översätts automatiskt.",
   "menu.language.title": "Välj språk",
   "menu.language.translation_by_probono": "Översättningarna gjorda probono av",
   "menu.main.contact": "Kontakt",
-  "menu.main.create_account": "Skapa konto",
   "menu.main.faq": "Frågor och Svar",
   "menu.main.find_assignment": "Hitta uppdrag",
   "menu.main.login": "Logga in",
   "menu.main.logout": "Logga ut",
   "menu.main.my_assignment": "Mina uppdrag",
   "menu.main.profile": "Profil",
-  "menu.main.sign_in": "Logga i",
-  "page_not_found_error.header": "404 - Sidan kan inte hittas",
-  "page_not_found_error.subtitle": "Vi ber om ursäkt, sidan du letar efter finns inte.",
+  "page.not.found.error.description": "Vi ber om ursäkt, sidan du letar efter finns inte.",
+  "page.not.found.error.title": "404 - Sidan kan inte hittas",
   "reset.password.form.password.placeholder": "Nytt lösenord",
   "reset.password.form.password.validation.min.length": "Lösenord måste vara minst 6 tecken långt",
   "reset.password.form.password.validation.required": "Nytt lösenord saknas",
   "reset.password.form.submit.button": "Byt lösenord",
   "reset.password.form.submit.error": "Tyvärr, kunde ditt lösenord inte uppdateras just nu. Var god gör ett nytt försök.",
   "reset.password.title": "Skriv in ditt nya lösenord",
-  "start.header.body": "Just Arrived helps you get the credentials you need to enter the Swedish labor market by matching you with Swedish companies. Right now Just Arrived mediates jobs in Stockholm, Gothenburg and Malmö. Create an account to get started!",
-  "start.header.subtitle": "Få erfarenheten du behöver för att komma in på den svenska arbetsmarknaden",
-  "start.header.title": "Välkommen!",
-  "start.instruction_section.slide_1.text_1": "Sök jobb i din närhet",
-  "start.instruction_section.slide_1.text_2": "Utför jobbet",
-  "start.instruction_section.slide_1.text_3": "Få betalt inom två veckor",
-  "start.instruction_section.slide_1.title": "Så här fungerar det:",
-  "start.instruction_section.slide_2.text_1": "Det här behöver du:",
-  "start.instruction_section.slide_2.text_2": "Samordningsnummer eller personnummer",
-  "start.instruction_section.slide_2.text_3": "Tillgång till ett bankkonto",
-  "start.instruction_section.slide_2.text_4": "Arbetstillstånd",
-  "start.instruction_section.slide_2.title": "Skapa din profil!",
-  "start.partner_section.text": "Just Arrived is a joint pro-bono initiative designed to help newly arrived immigrants to the Swedish labour market. We are owned by a foundation and is run by an association of companies.",
-  "start.partner_section.title": "Våra partners",
+  "skill.proficiency.basic": "Grundläggande kunskaper",
+  "skill.proficiency.beginner": "Nybörjare",
+  "skill.proficiency.expert": "Expert",
+  "skill.proficiency.intermediate": "Medelkunskap",
+  "skill.proficiency.professional": "Professionell",
   "terms.frilans_finans.accept": "Jag accepterar Frilans Finans",
   "terms": "regler, villkor och anställningskontrakt",
   "user.account.bank": "Clearing nummer",
   "user.account.cardnr": "Kontonummer",
   "user.account.description": "Var vill du att lönen ska utbetalas till när du har utfört uppdraget?",
   "user.account": "Bank konto",
-  "user.apply.confirmation.text": "Vi på Just Arrived håller tummarna. Om uppdragsgivaren skickar ett erbjudande har du 18 timmar på dig att tacka ja till uppdraget. Du hittar uppdraget under Mina Uppdrag. Där samlas även all kommunikation som sker med uppdragsgivaren.",
-  "user.apply.confirmation": "Du har ansökt om uppdraget",
-  "user.apply.find_more": "Hitta fler uppdrag",
   "user.profile.form.at.und.label": "AT-UND",
   "user.profile.form.coordination.number.label": "Var snäll ange samordningsnummer",
-  "user.profile.form.coordination.number.placeholder": "Samordningsnummer",
   "user.profile.form.coordination.number.or.ssn.label": "Personnummer eller samordningsnummer",
+  "user.profile.form.coordination.number.placeholder": "Samordningsnummer",
   "user.profile.form.country.label": "Hemland",
   "user.profile.form.country.placeholder": "Väl land",
   "user.profile.form.country.validation.required": "Hemland måste anges",
@@ -147,6 +167,7 @@
   "user.profile.form.general.skills.label": "Generella kompetenser",
   "user.profile.form.general.skills.placeholder": "Generella kompetenser",
   "user.profile.form.got.coordination.number.label": "Samordningsnummer",
+  "user.profile.form.language.proficiency.placeholder": "Språknivå",
   "user.profile.form.languages.label": "Andra språkkunskaper",
   "user.profile.form.languages.placeholder": "Välj språk",
   "user.profile.form.lma.upload.button": "Ladda upp",
@@ -174,6 +195,7 @@
   "user.profile.form.skatteverket.certificate.upload.description": "Ladda upp foto på samordningsnummer-certifikatet (från Skatteverket)",
   "user.profile.form.skatteverket.certificate.upload.fail": "Fotot på samordningsnummer-certifikatet kunde inte laddas upp",
   "user.profile.form.skatteverket.certificate.upload.success": "Fotot på samordningsnummer-certifikatet har laddats upp",
+  "user.profile.form.skill.proficiency.placeholder": "Kompetensnivå",
   "user.profile.form.skills.label": "Kompetenser",
   "user.profile.form.skills.placeholder": "Välj kompetenser",
   "user.profile.form.ssn.label": "Personnummer",
@@ -191,8 +213,6 @@
   "user.profile.form.work.permit.front.upload.description": "Ladda upp fotot på ditt arbetstillstånd",
   "user.profile.form.work.permit.front.upload.fail": "Fotot på ditt arbetstillstånd kunde inte laddas upp",
   "user.profile.form.work.permit.front.upload.success": "Fotot på ditt arbetstillstånd har laddats upp",
-  "user.profile.form.language.proficiency.placeholder": "Språknivå",
-  "user.profile.form.skill.proficiency.placeholder": "Kompetensnivå",
   "user.profile.header.information": "Tänk på att en väl ifylld profil ökar dina möjligheter att få uppdrag",
   "user.profile.header.title": "Profil",
   "user.profile.tab.personal.details.title": "Personuppgifter",
@@ -212,11 +232,11 @@
   "user.register.form.email.validation.required": "E-post måste anges",
   "user.register.form.first.name.header": "Förnamn",
   "user.register.form.first.name.placeholder": "Förnam",
+  "user.register.form.first.name.validation.min.length": "Förnamn måste vara minst 2 tecken",
+  "user.register.form.first.name.validation.required": "Förnamn måste anges",
   "user.register.form.gender.header": "Kön",
   "user.register.form.gender.placeholder": "Kö",
   "user.register.form.gender.required": "Du måste ange ett kön",
-  "user.register.form.first.name.validation.min.length": "Förnamn måste vara minst 2 tecken",
-  "user.register.form.first.name.validation.required": "Förnamn måste anges",
   "user.register.form.last.name.header": "Efternam",
   "user.register.form.last.name.placeholder": "Efternamn",
   "user.register.form.last.name.validation.min.length": "Efternamn måste vara minst 2 tecken långt",
