i18n for comments title

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,6 +22,7 @@
   "assignment.status.reply": "Provide answer",
   "assignment.status.user_company_hire": "The company wants to hire you",
   "assignment.status.you_hired": "You've been hired",
+  "assignment.comments.title": "Comment on the job",
   "common.back": "Back",
   "common.congratulation": "Congratulations!",
   "common.error": "Oops, something went a bit wrong... But don't worry, we are on it!",
