--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -19,9 +19,10 @@
   "assignment.status.offer.approve": "هل مازلت ترغب في أداء العمل، ويمكنك الإلتزام بذلك؟",
   "assignment.status.offer": "حصلت على عرضٍ بخصوص القيام بالوظيفة أجِب ضمن (الوقت) المُحتسَب",
   "assignment.status.performed": "تم أداء الوظيفة",
-  "assignment.status.reply": "أعلِم",
+  "assignment.status.reply": "قبول عرض",
   "assignment.status.user_company_hire": "الشركة ترغب في توظيفك",
   "assignment.status.you_hired": "لقد تم توظيفك",
+  "assignment.comments.title": "التعليق على وظيفة",
   "common.back": "عودة",
   "common.congratulation": "مبروك!",
   "common.error": "معذرة، حدث خطأ... لكن لا تقلق، نحن نقوم بإصلاحه!",
