--- a/src/assets/i18n/fa.json
+++ b/src/assets/i18n/fa.json
@@ -19,9 +19,10 @@
   "assignment.status.offer.approve": "Would you still like to perform the assignment and can you commit to do so?",
   "assignment.status.offer": "به شما پیشنهاد شده که این مأموریت را انجام دهید. پاسخ ظرف مدت ",
   "assignment.status.performed": "Job performed",
-  "assignment.status.reply": "پاسخ دهید",
+  "assignment.status.reply": "Accept offer",
   "assignment.status.user_company_hire": "Företaget vill anlita dig",
   "assignment.status.you_hired": "You've been hired",
+  "assignment.comments.title": "Comment on the job",
   "common.back": "بازگشت",
   "common.congratulation": "تبریک!",
   "common.error": "Oops, something went a bit wrong... But don't worry, we are on it!",
