--- a/src/assets/i18n/ku.json
+++ b/src/assets/i18n/ku.json
@@ -19,9 +19,10 @@
   "assignment.status.offer.approve": "Would you still like to perform the assignment and can you commit to do so?",
   "assignment.status.offer": "Du har fått erbjudande om att utföra uppdraget. Svara inom",
   "assignment.status.performed": "Job performed",
-  "assignment.status.reply": "Bersivê bide",
+  "assignment.status.reply": "Accept offer",
   "assignment.status.user_company_hire": "Företaget vill anlita dig",
   "assignment.status.you_hired": "You've been hired",
+  "assignment.comments.title": "Comment on the job",
   "common.back": "Vegere",
   "common.congratulation": "Grattis!",
   "common.error": "Oops, something went a bit wrong... But don't worry, we are on it!",
