--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -19,9 +19,10 @@
   "assignment.status.offer.approve": "Vill du fortfarande utföra uppdraget, och kan du åta dig att göra det ?",
   "assignment.status.offer": "Du har fått erbjudande om att utföra uppdraget. Svara inom",
   "assignment.status.performed": "Uppdrag utfört",
-  "assignment.status.reply": "Ge besked",
+  "assignment.status.reply": "Tacka ja",
   "assignment.status.user_company_hire": "Företaget vill anlita dig",
   "assignment.status.you_hired": "Du har blivit anställd",
+  "assignment.comments.title": "Kommentera på jobbet",
   "common.back": "Tillbaka",
   "common.congratulation": "Grattis!",
   "common.error": "Hoppsan! Något gick fel.. oroa dig inte vi jobbar på det!",
