--- a/src/assets/i18n/ps.json
+++ b/src/assets/i18n/ps.json
@@ -19,9 +19,10 @@
   "assignment.status.offer.approve": "Would you still like to perform the assignment and can you commit to do so?",
   "assignment.status.offer": "تاسې د ګومارنې ترسره کولو لپاره یو وړاندیز ترلاسه کړی دی. د (وخت) موده کې ځواب ورکړئ",
   "assignment.status.performed": "Job performed",
-  "assignment.status.reply": "خبر ورکړئ",
+  "assignment.status.reply": "Accept offer",
   "assignment.status.user_company_hire": "Företaget vill anlita dig",
   "assignment.status.you_hired": "You've been hired",
+  "assignment.comments.title": "Comment on the job",
   "common.back": "شا ته",
   "common.congratulation": "Grattis!",
   "common.error": "Oops, something went a bit wrong... But don't worry, we are on it!",
