register component done

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -223,11 +223,11 @@
   "user.register.form.country.and.languages.section.header": "Country of origin and language",
   "user.register.form.country.of.origin.header": "Country of origin",
   "user.register.form.country.of.origin.placeholder": "Country of origin",
-  "user.register.form.country.of.origin.required": "Please choose your country of origin",
+  "user.register.form.country.of.origin.validation.required": "Please choose your country of origin",
   "user.register.form.default.language.description": "This is the language we will use to communicate with you",
   "user.register.form.default.language.header": "Default language",
   "user.register.form.default.language.placeholder": "Default language",
-  "user.register.form.default.language.required": "Please choose the default language",
+  "user.register.form.default.language.validation.required": "Please choose the default language",
   "user.register.form.email.header": "Email",
   "user.register.form.email.placeholder": "Email",
   "user.register.form.email.validation.pattern": "That is not a valid email",
@@ -246,7 +246,7 @@
   "user.register.form.last.name.validation.required": "Last name is required",
   "user.register.form.native.language.header": "Native language",
   "user.register.form.native.language.placeholder": "Native language",
-  "user.register.form.native.language.required": "Please choose your native language",
+  "user.register.form.native.language.validation.required": "Please choose your native language",
   "user.register.form.password.header": "Password",
   "user.register.form.password.placeholder": "Password",
   "user.register.form.password.section.header": "Password",
