--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -190,11 +190,12 @@
   "user.profile.form.residence.permit.front.upload.description": "Upload front photo of residence permit",
   "user.profile.form.residence.permit.front.upload.fail": "Front photo of residence permit could not be uploaded",
   "user.profile.form.residence.permit.front.upload.success": "Front photo of residence permit has been uploaded",
-  "user.profile.form.resume.label": "Resume",
+  "user.profile.form.resume.label": "Resumé",
+  "user.profile.form.resume.list.title": "Previously uploaded resumés.",
   "user.profile.form.resume.upload.button": "Upload",
-  "user.profile.form.resume.upload.description": "Upload your resume",
-  "user.profile.form.resume.upload.fail": "Resume could not be uploaded",
-  "user.profile.form.resume.upload.success": "Resume has been uploaded",
+  "user.profile.form.resume.upload.description": "Upload your resumé",
+  "user.profile.form.resume.upload.fail": "Resumé could not be uploaded, please try again (PDF works best).",
+  "user.profile.form.resume.upload.success": "Resumé has been uploaded.",
   "user.profile.form.skatteverket.certificate.upload.button": "Upload",
   "user.profile.form.skatteverket.certificate.upload.description": "Upload photo of coordination number certificate (from the swedish tax agency)",
   "user.profile.form.skatteverket.certificate.upload.fail": "Photo of coordination number certificate could not be uploaded",
