Add user-register.component form loading I18n

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -38,6 +38,7 @@
   "common.yes": "Yes",
   "company.assignments.filter_1": "Jobs",
   "company.assignments.filter_2": "History",
+  "component.loading": "Loading..",
   "confirmation.applied.for.job.button": "Search for more jobs",
   "confirmation.applied.for.job.description": "We're crossing our fingers for you right now. If the employer makes an offer, you have 18 hours to accept the offer. You'll find the job under My Jobs. This is where you'll also find all communication that happens between you and the employer.",
   "confirmation.applied.for.job.title": "You have applied for the job",
