Convert contact.component to Semantic UI

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -51,6 +51,7 @@
   "confirmation.password.reset.link.title": "A password reset message has been sent to you!",
   "confirmation.password.reset.title": "Successfully changed your password!",
   "contact.form.description": "Questions? Thoughts? We'd love to help!",
+  "contact.form.email.header": "Email",
   "contact.form.email.placeholder": "Email",
   "contact.form.email.validation.length": "Your email must be at least 6 characters long",
   "contact.form.email.validation.required": "You need to enter your email",
@@ -58,6 +59,7 @@
   "contact.form.message.placeholder": "Message",
   "contact.form.message.validation.length": "Your message must be at least 2 characters long",
   "contact.form.message.validation.required": "You need to enter a message",
+  "contact.form.name.header": "Name",
   "contact.form.name.placeholder": "Name",
   "contact.form.name.validation.length": "Your name must be at least 2 characters long",
   "contact.form.name.validation.required": "You need to enter your name",
