--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -218,8 +218,8 @@
   "user.profile.form.work.permit.front.upload.success": "Front photo of work permit has been uploaded",
   "user.profile.header.information": "Remember that a complete profile increases your chances of getting jobs",
   "user.profile.header.title": "Profile",
-  "user.profile.tab.personal.details.title": "Personal details",
-  "user.profile.tab.profile.details.title": "Profile details",
+  "user.profile.tab.personal.details.title": "Personal",
+  "user.profile.tab.profile.details.title": "Profile",
   "user.register.form.address.section.header": "Address",
   "user.register.form.city.header": "City",
   "user.register.form.city.placeholder": "City",
