--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -154,6 +154,10 @@
   "user.account.cardnr": "Account number",
   "user.account.description": "Where would you like your salary to be paid out once you have completed the job?",
   "user.account": "Bank account details",
+  "form.parts.user.first.name.input.label": "First name",
+  "form.parts.user.first.name.input.placeholder": "First name",
+  "form.parts.user.last.name.input.label": "Last name",
+  "form.parts.user.last.name.input.placeholder": "Last name",
   "user.profile.form.at.und.label": "AT-UND",
   "user.profile.form.coordination.number.label": "Please provide the coordination number",
   "user.profile.form.coordination.number.or.ssn.label": "Social security number or coordination number",
