Designed and added a job card component. Could potentially be used in a slider etc. Or recommendations perhaps.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,6 @@
 {
+  "job.card.hours": "{{hours}} hours",
+  "job.card.currency.per.hour": "{{currency}}/hour",
   "validations.required": "can't be blank",
   "validations.minlength": "is too short (minimum {{minLength}} characters)",
   "validations.maxlength": "is too long (maximum {{maxLength}} characters)",
