--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -239,8 +239,8 @@
   "user.register.form.default.language.description": "This is the language we will use to communicate with you",
   "user.register.form.default.language.header": "Default language",
   "user.register.form.default.language.placeholder": "Default language",
-  "user.register.form.email.header": "Email",
-  "user.register.form.email.placeholder": "Email",
+  "user.form.email.header": "Email",
+  "user.form.email.placeholder": "Email",
   "user.register.form.email.validation.pattern": "That is not a valid email",
   "user.register.form.first.name.header": "First name",
   "user.register.form.first.name.placeholder": "First name",
@@ -276,8 +276,6 @@
   "user.settings.form.city.placeholder": "City",
   "user.settings.form.clearing.number.label": "Clearing number",
   "user.settings.form.clearing.number.placeholder": "Clearing number",
-  "user.settings.form.email.label": "Email",
-  "user.settings.form.email.placeholder": "Email",
   "user.settings.form.first.name.label": "First name",
   "user.settings.form.first.name.placeholder": "First name",
   "user.settings.form.last.name.label": "Last name",
