Use first- and last-name o components in user-details.component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -156,12 +156,12 @@
   "user.account.cardnr": "Account number",
   "user.account.description": "Where would you like your salary to be paid out once you have completed the job?",
   "user.account": "Bank account details",
-  "form.parts.user.first.name.input.label": "First name",
-  "form.parts.user.first.name.input.placeholder": "First name",
-  "form.parts.user.last.name.input.label": "Last name",
-  "form.parts.user.last.name.input.placeholder": "Last name",
-  "form.parts.user.password.input.label": "Password",
-  "form.parts.user.password.input.placeholder": "Password",
+  "user.form.first.name.input.label": "First name",
+  "user.form.first.name.input.placeholder": "First name",
+  "user.form.last.name.input.label": "Last name",
+  "user.form.last.name.input.placeholder": "Last name",
+  "user.form.password.input.label": "Password",
+  "user.form.password.input.placeholder": "Password",
   "user.profile.form.at.und.label": "AT-UND",
   "user.profile.form.coordination.number.label": "Please provide the coordination number",
   "user.profile.form.coordination.number.or.ssn.label": "Social security number or coordination number",
@@ -276,10 +276,6 @@
   "user.settings.form.city.placeholder": "City",
   "user.settings.form.clearing.number.label": "Clearing number",
   "user.settings.form.clearing.number.placeholder": "Clearing number",
-  "user.settings.form.first.name.label": "First name",
-  "user.settings.form.first.name.placeholder": "First name",
-  "user.settings.form.last.name.label": "Last name",
-  "user.settings.form.last.name.placeholder": "Last name",
   "user.settings.form.new.password.label": "Change password",
   "user.settings.form.new.password.placeholder": "New password",
   "user.settings.form.old.password.placeholder": "Old password",
