--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -254,8 +254,6 @@
   "user.register.form.password.header": "Password",
   "user.register.form.password.placeholder": "Password",
   "user.register.form.password.section.header": "Password",
-  "user.register.form.phone.header": "Phone",
-  "user.register.form.phone.placeholder": "Phone",
   "user.register.form.repeat.password.header": "Repeat the password",
   "user.register.form.repeat.password.placeholder": "Repeat password",
   "user.register.form.repeat.password.validation.mismatch": "Supplied passwords does not match",
@@ -280,8 +278,8 @@
   "user.settings.form.new.password.placeholder": "New password",
   "user.settings.form.old.password.placeholder": "Old password",
   "user.settings.form.personal.info.header": "Personal information",
-  "user.settings.form.phone.label": "Phone",
-  "user.settings.form.phone.placeholder": "Phone",
+  "user.form.phone.label": "Phone",
+  "user.form.phone.placeholder": "Phone",
   "user.settings.form.repeat.password.placeholder": "Repeat password",
   "user.settings.form.repeat.password.validation.mismatch": "Supplied passwords does not match",
   "user.settings.form.street.placeholder": "Street",
