Add user-address-input.component and refactor user forms

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -231,8 +231,8 @@
   "user.profile.tab.personal.details.title": "Personal",
   "user.profile.tab.profile.details.title": "Profile",
   "user.register.form.address.section.header": "Address",
-  "user.register.form.city.header": "City",
-  "user.register.form.city.placeholder": "City",
+  "user.form.city.header": "City",
+  "user.form.city.placeholder": "City",
   "user.register.form.country.and.languages.section.header": "Country of origin and language",
   "user.register.form.country.of.origin.header": "Country of origin",
   "user.register.form.country.of.origin.placeholder": "Country of origin",
@@ -257,21 +257,20 @@
   "user.register.form.repeat.password.header": "Repeat the password",
   "user.register.form.repeat.password.placeholder": "Repeat password",
   "user.register.form.repeat.password.validation.mismatch": "Supplied passwords does not match",
-  "user.register.form.street.header": "Street",
-  "user.register.form.street.placeholder": "Street",
+  "user.form.street.header": "Street",
+  "user.form.street.placeholder": "Street",
   "user.register.form.submit.button": "Sign up",
   "user.register.form.submit.fail": "There are some errors, please review them above.",
   "user.register.form.submit.success": "Your account was successfully created. You can now use it to sign in.",
   "user.register.form.terms.accept": "I accept Just Arrived's terms, conditions and employment contract",
-  "user.register.form.zip.header": "Zip code",
-  "user.register.form.zip.placeholder": "Zip",
+  "user.form.zip.header": "Zip code",
+  "user.form.zip.placeholder": "Zip",
   "user.register.title": "Sign up",
   "user.settings.form.account.number.label": "Account number",
   "user.settings.form.account.number.placeholder": "Account number",
   "user.settings.form.address.header": "Address",
   "user.settings.form.bank.details.header": "Bank details",
   "user.settings.form.change.password.header": "Password",
-  "user.settings.form.city.placeholder": "City",
   "user.settings.form.clearing.number.label": "Clearing number",
   "user.settings.form.clearing.number.placeholder": "Clearing number",
   "user.settings.form.new.password.label": "Change password",
@@ -282,9 +281,7 @@
   "user.form.phone.placeholder": "Phone",
   "user.settings.form.repeat.password.placeholder": "Repeat password",
   "user.settings.form.repeat.password.validation.mismatch": "Supplied passwords does not match",
-  "user.settings.form.street.placeholder": "Street",
   "user.settings.form.submit.button": "Save profile changes",
   "user.settings.form.submit.fail": "There are some errors, please review them above.",
-  "user.settings.form.submit.success": "Your profile was updated successfully!",
-  "user.settings.form.zip.placeholder": "Zip"
+  "user.settings.form.submit.success": "Your profile was updated successfully!"
 }
