--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -266,13 +266,13 @@
   "user.form.zip.header": "Zip code",
   "user.form.zip.placeholder": "Zip",
   "user.register.title": "Sign up",
-  "user.settings.form.account.number.label": "Account number",
-  "user.settings.form.account.number.placeholder": "Account number",
+  "user.form.account.number.label": "Account number",
+  "user.form.account.number.placeholder": "Account number",
   "user.settings.form.address.header": "Address",
   "user.settings.form.bank.details.header": "Bank details",
   "user.settings.form.change.password.header": "Password",
-  "user.settings.form.clearing.number.label": "Clearing number",
-  "user.settings.form.clearing.number.placeholder": "Clearing number",
+  "user.form.clearing.number.label": "Clearing number",
+  "user.form.clearing.number.placeholder": "Clearing number",
   "user.settings.form.new.password.label": "Change password",
   "user.settings.form.new.password.placeholder": "New password",
   "user.settings.form.old.password.placeholder": "Old password",
