--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,14 +1,8 @@
 {
-  "job.card.hours": "{{hours}} hours",
-  "job.card.currency.per.hour": "{{currency}}/hour",
-  "validations.required": "can't be blank",
-  "validations.minlength": "is too short (minimum {{minLength}} characters)",
-  "validations.maxlength": "is too long (maximum {{maxLength}} characters)",
-  "validations.pattern": "does not conform to the required pattern",
-  "validations.email_pattern": "must look like an email address",
   "applications.title": "Just Arrived",
   "assignment.after_tax": "after tax",
   "assignment.assignments.title": "Job",
+  "assignment.comments.title": "Comment on the job",
   "assignment.details": "Job details",
   "assignment.hours": "Hours",
   "assignment.rate.gross_salary": "gross salary",
@@ -16,6 +10,7 @@
   "assignment.status.apply": "Apply for job",
   "assignment.status.click_here": "Click here",
   "assignment.status.company.approve_user": "would like you to hire you for this assignment",
+  "assignment.status.confirmation_error" : "An error occured when providing answer to this job.",
   "assignment.status.create_account": "Create an account",
   "assignment.status.finished": "Finished",
   "assignment.status.hide_details": "To hide details",
@@ -28,8 +23,6 @@
   "assignment.status.reply": "Accept offer",
   "assignment.status.user_company_hire": "The company wants to hire you",
   "assignment.status.you_hired": "You've been hired",
-  "assignment.status.confirmation_error" : "An error occured when providing answer to this job.",
-  "assignment.comments.title": "Comment on the job",
   "common.back": "Back",
   "common.congratulation": "Congratulations!",
   "common.error": "Oops, something went a bit wrong... But don't worry, we are on it!",
@@ -107,8 +100,10 @@
   "home.jobs.slider.user.jobs.will.perform.job.label": "Ongoing",
   "home.partners.description": "Just Arrived is a joint pro-bono initiative designed to help newly arrived immigrants to the Swedish labour market. We are owned by a foundation and is run by an association of companies.",
   "home.partners.title": "Our partners",
-  "jobs.title": "All jobs ({{nbrOfJobs}})",
+  "job.card.currency.per.hour": "{{currency}}/hour",
+  "job.card.hours": "{{hours}} hours",
   "jobs.list.job_hours_and_hourly_salary": "{{hours}}h ({{hourlySalary}})",
+  "jobs.title": "All jobs ({{nbrOfJobs}})",
   "language.proficiency.basic": "Basic knowledge",
   "language.proficiency.beginner": "Beginner",
   "language.proficiency.expert": "Native speaker",
@@ -156,12 +151,26 @@
   "user.account.cardnr": "Account number",
   "user.account.description": "Where would you like your salary to be paid out once you have completed the job?",
   "user.account": "Bank account details",
+  "user.form.account.number.label": "Account number",
+  "user.form.account.number.placeholder": "Account number",
+  "user.form.city.header": "City",
+  "user.form.city.placeholder": "City",
+  "user.form.clearing.number.label": "Clearing number",
+  "user.form.clearing.number.placeholder": "Clearing number",
+  "user.form.email.header": "Email",
+  "user.form.email.placeholder": "Email",
   "user.form.first.name.input.label": "First name",
   "user.form.first.name.input.placeholder": "First name",
   "user.form.last.name.input.label": "Last name",
   "user.form.last.name.input.placeholder": "Last name",
   "user.form.password.input.label": "Password",
   "user.form.password.input.placeholder": "Password",
+  "user.form.phone.label": "Phone",
+  "user.form.phone.placeholder": "Phone",
+  "user.form.street.header": "Street",
+  "user.form.street.placeholder": "Street",
+  "user.form.zip.header": "Zip code",
+  "user.form.zip.placeholder": "Zip",
   "user.profile.form.at.und.label": "AT-UND",
   "user.profile.form.coordination.number.label": "Please provide the coordination number",
   "user.profile.form.coordination.number.or.ssn.label": "Social security number or coordination number",
@@ -231,16 +240,12 @@
   "user.profile.tab.personal.details.title": "Personal",
   "user.profile.tab.profile.details.title": "Profile",
   "user.register.form.address.section.header": "Address",
-  "user.form.city.header": "City",
-  "user.form.city.placeholder": "City",
   "user.register.form.country.and.languages.section.header": "Country of origin and language",
   "user.register.form.country.of.origin.header": "Country of origin",
   "user.register.form.country.of.origin.placeholder": "Country of origin",
   "user.register.form.default.language.description": "This is the language we will use to communicate with you",
   "user.register.form.default.language.header": "Default language",
   "user.register.form.default.language.placeholder": "Default language",
-  "user.form.email.header": "Email",
-  "user.form.email.placeholder": "Email",
   "user.register.form.email.validation.pattern": "That is not a valid email",
   "user.register.form.first.name.header": "First name",
   "user.register.form.first.name.placeholder": "First name",
@@ -257,31 +262,26 @@
   "user.register.form.repeat.password.header": "Repeat the password",
   "user.register.form.repeat.password.placeholder": "Repeat password",
   "user.register.form.repeat.password.validation.mismatch": "Supplied passwords does not match",
-  "user.form.street.header": "Street",
-  "user.form.street.placeholder": "Street",
   "user.register.form.submit.button": "Sign up",
   "user.register.form.submit.fail": "There are some errors, please review them above.",
   "user.register.form.submit.success": "Your account was successfully created. You can now use it to sign in.",
   "user.register.form.terms.accept": "I accept Just Arrived's terms, conditions and employment contract",
-  "user.form.zip.header": "Zip code",
-  "user.form.zip.placeholder": "Zip",
   "user.register.title": "Sign up",
-  "user.form.account.number.label": "Account number",
-  "user.form.account.number.placeholder": "Account number",
   "user.settings.form.address.header": "Address",
   "user.settings.form.bank.details.header": "Bank details",
   "user.settings.form.change.password.header": "Password",
-  "user.form.clearing.number.label": "Clearing number",
-  "user.form.clearing.number.placeholder": "Clearing number",
   "user.settings.form.new.password.label": "Change password",
   "user.settings.form.new.password.placeholder": "New password",
   "user.settings.form.old.password.placeholder": "Old password",
   "user.settings.form.personal.info.header": "Personal information",
-  "user.form.phone.label": "Phone",
-  "user.form.phone.placeholder": "Phone",
   "user.settings.form.repeat.password.placeholder": "Repeat password",
   "user.settings.form.repeat.password.validation.mismatch": "Supplied passwords does not match",
   "user.settings.form.submit.button": "Save profile changes",
   "user.settings.form.submit.fail": "There are some errors, please review them above.",
-  "user.settings.form.submit.success": "Your profile was updated successfully!"
+  "user.settings.form.submit.success": "Your profile was updated successfully!",
+  "validations.email_pattern": "must look like an email address",
+  "validations.maxlength": "is too long (maximum {{maxLength}} characters)",
+  "validations.minlength": "is too short (minimum {{minLength}} characters)",
+  "validations.pattern": "does not conform to the required pattern",
+  "validations.required": "can't be blank"
 }
