--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -132,6 +132,7 @@
   "menu.main.logout": "Log out",
   "menu.main.my_assignment": "My jobs",
   "menu.main.profile": "Profile",
+  "menu.main.staffing_time_report": "Time report",
   "page.not.found.error.description": "Sorry, the page you are looking for does not exist.",
   "page.not.found.error.title": "404 - Page Not Found",
   "reset.password.form.password.placeholder": "New password",
